# TKiK-projekt

./: .gitignore  README.md  lib_build_commands.txt
cmake_project/: CMakeLists.txt
cmake_project/.antlr/: TLexer.java  TParser.java
cmake_project/antlr4-unix/lib64/cmake/GTest/: GTestTargets-debug.cmake
cmake_project/antlr4-unix/lib64/cmake/antlr4-runtime/: antlr4-runtime-config.cmake  antlr4-targets-debug.cmake  antlr4-targets.cmake
cmake_project/antlr4-unix/lib64/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
cmake_project/antlr4-win/lib/cmake/antlr4-generator/: antlr4-generator-config.cmake
cmake_project/antlr4-win/lib/cmake/antlr4-runtime/: antlr4-targets-debug.cmake
cmake_project/antlr4-win/lib/pkgconfig/: gtest_main.pc
cmake_project/classes/: PythonCustomParserListener.cpp  PythonCustomParserListener.h  PythonCustomParserVisitor.cpp  PythonCustomParserVisitor.h  PythonLexer.cpp  PythonLexer.h  PythonLexer.interp  PythonLexer.tokens  PythonLexerBase.cpp  PythonParser.cpp  PythonParser.h  PythonParser.interp  PythonParserBaseListener.h  PythonParserBaseVisitor.cpp  PythonParserBaseVisitor.h  PythonParserListener.cpp  PythonParserListener.h  PythonParserVisitor.cpp  PythonParserVisitor.h  Scope.h
cmake_project/examples/: testfile.py
cmake_project/lib/: antlr4-runtime.lib  gtest_main.lib
cmake_project/lib/cmake/GTest/: GTestTargets.cmake
cmake_project/lib/cmake/antlr4-runtime/: antlr4-runtime-config.cmake  antlr4-targets-release.cmake  antlr4-targets.cmake
cmake_project/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
cmake_project/src/: TVisitor.cpp  main.cpp
grammar/: Python.g4  PythonLexer.g4  PythonParser.g4  PythonParserSimplified.g4  PythonSimpler.g4  commands.txt  temp_tokens.txt  testfile.js  testfile.py
grammar/cpp-base/: PythonLexerBase.cpp  PythonLexerBase.h
grammar/cpp-base-old/: PythonLexerBase.cpp
